@@ -1,6 +1,7 @@
 === 2016-12-19
 * Enhancements
   * Added #include? and #selected? to SelectList
+  * Added #append to TextField
 === 2016-12-14
 * Enhancements
   * Added shortcut method to check element exists
